# libprop

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: action.yml
extras/: IntVars  Negated_Specifications  Specifications  aF.facts  aGV.facts
include/: ast.h  ast_adapted.h  formula.h  formula_util.h  parser_def.h  trace.h
src/: TestLibProp.cpp  formula.cpp  parser.cpp  trace.cpp
test/: test_FMinus.cpp  test_FPlus.cpp  test_GMinus.cpp  test_GPlus.cpp  test_HPLTLClasses.cpp  test_XMinus.cpp  test_XPlus.cpp  test_complexprops.cpp  test_logicalop.cpp  test_once_operator.cpp  test_parser.cpp  test_propvar.cpp  test_serialize.cpp  test_since_operator.cpp  test_termarray.cpp  test_vartrace.cpp  test_yesterday_operator.cpp  testmain.cpp  testprop.cpp  testutils.cpp  testutils.h
